Tabbar controller and it's segue controllers added to scene

--- a/Airbnb-Storyboard-Clone/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Base.lproj/Main.storyboard
@@ -1,24 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="R9C-r9-36O"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="502" y="-437"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="kDc-BR-v8o">
+            <objects>
+                <viewController id="N6X-X7-C0Y" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hod-6d-2eX">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="8du-fh-mVW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="bQf-jN-wVC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eR5-mG-LFu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-390" y="-72"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="fwc-HS-Jee">
+            <objects>
+                <viewController id="ItZ-CE-0MZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="noU-5b-6w4">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="n1e-2Y-TR7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="JPV-z7-XdM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QzT-25-t1B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="502" y="246"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="GEK-5S-a3D">
+            <objects>
+                <viewController id="w5b-p5-z2d" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B0P-Qh-EQg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="195-fc-EQS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="AkS-ap-Xcv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iwg-gQ-Axe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-389" y="-746"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="kIg-Sd-VhW">
+            <objects>
+                <viewController id="trX-wC-wKe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Aaq-HZ-TxM">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="u56-E9-BPb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="JnI-Gm-kSZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WoB-qa-8Kk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="468" y="-1116"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Tsj-01-yOd">
+            <objects>
+                <tabBarController id="cEF-PB-cry" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FPF-hP-tiS">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="w5b-p5-z2d" kind="relationship" relationship="viewControllers" id="OgL-VZ-fRA"/>
+                        <segue destination="N6X-X7-C0Y" kind="relationship" relationship="viewControllers" id="lbo-ud-Sbp"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="nTt-iH-qlf"/>
+                        <segue destination="trX-wC-wKe" kind="relationship" relationship="viewControllers" id="ReG-Ha-lBK"/>
+                        <segue destination="ItZ-CE-0MZ" kind="relationship" relationship="viewControllers" id="Fb6-vw-9N9"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d44-4m-ub9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1276" y="-396"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
