--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Trips-->
+        <!--TripsVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TripsVC" title="TripsVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="TripsVC" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,10 +25,10 @@
             </objects>
             <point key="canvasLocation" x="502" y="-437"/>
         </scene>
-        <!--Wishlists-->
+        <!--WishlistsVC-->
         <scene sceneID="kDc-BR-v8o">
             <objects>
-                <viewController id="N6X-X7-C0Y" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WishlistsVC" title="WishlistsVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="N6X-X7-C0Y" customClass="WishlistsVC" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hod-6d-2eX">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,10 +41,10 @@
             </objects>
             <point key="canvasLocation" x="-390" y="-72"/>
         </scene>
-        <!--Profile-->
+        <!--ProfileVC-->
         <scene sceneID="fwc-HS-Jee">
             <objects>
-                <viewController id="ItZ-CE-0MZ" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileVC" title="ProfileVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ItZ-CE-0MZ" customClass="ProfileVC" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="noU-5b-6w4">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,10 +57,10 @@
             </objects>
             <point key="canvasLocation" x="502" y="246"/>
         </scene>
-        <!--Explore-->
+        <!--ExploreVC-->
         <scene sceneID="GEK-5S-a3D">
             <objects>
-                <viewController id="w5b-p5-z2d" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ExploreVC" title="ExploreVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="w5b-p5-z2d" customClass="ExploreVC" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="B0P-Qh-EQg">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,10 +73,10 @@
             </objects>
             <point key="canvasLocation" x="-389" y="-746"/>
         </scene>
-        <!--Inbox-->
+        <!--InboxVC-->
         <scene sceneID="kIg-Sd-VhW">
             <objects>
-                <viewController id="trX-wC-wKe" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InboxVC" title="InboxVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="trX-wC-wKe" customClass="InboxVC" customModule="Airbnb_Storyboard_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Aaq-HZ-TxM">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
