--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -75,7 +75,21 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRY-gT-z5N" userLabel="FilterView">
                                         <rect key="frame" x="300.33333333333331" y="5" width="57.666666666666686" height="90"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIo-Gb-9Zl" userLabel="FilterCircularView">
+                                                <rect key="frame" x="4" y="20" width="50" height="50"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="Mos-7a-0bg"/>
+                                                    <constraint firstAttribute="height" constant="50" id="aaN-vf-MH3"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="bIo-Gb-9Zl" firstAttribute="centerY" secondItem="HRY-gT-z5N" secondAttribute="centerY" id="as2-cN-NA6"/>
+                                            <constraint firstItem="bIo-Gb-9Zl" firstAttribute="centerX" secondItem="HRY-gT-z5N" secondAttribute="centerX" id="jiG-AE-W1i"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
