--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                 <rect key="frame" x="15" y="59" width="363" height="100"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-g1-CUH" userLabel="SearchView">
-                                        <rect key="frame" x="5" y="5" width="272.33333333333331" height="90"/>
+                                        <rect key="frame" x="5" y="15" width="272.33333333333331" height="70"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRY-gT-z5N" userLabel="FilterView">
@@ -97,10 +97,10 @@
                                     <constraint firstItem="HRY-gT-z5N" firstAttribute="leading" secondItem="ed7-g1-CUH" secondAttribute="trailing" constant="5" id="0GV-wt-Pyz"/>
                                     <constraint firstItem="ed7-g1-CUH" firstAttribute="leading" secondItem="esW-XQ-Rgr" secondAttribute="leading" constant="5" id="1Od-IT-0uZ"/>
                                     <constraint firstAttribute="height" constant="100" id="2vF-Pv-rBi"/>
-                                    <constraint firstAttribute="bottom" secondItem="ed7-g1-CUH" secondAttribute="bottom" constant="5" id="DFn-48-k0n"/>
+                                    <constraint firstAttribute="bottom" secondItem="ed7-g1-CUH" secondAttribute="bottom" constant="15" id="DFn-48-k0n"/>
                                     <constraint firstItem="HRY-gT-z5N" firstAttribute="top" secondItem="esW-XQ-Rgr" secondAttribute="top" id="KTW-ob-8sM"/>
                                     <constraint firstAttribute="trailing" secondItem="HRY-gT-z5N" secondAttribute="trailing" id="RLK-bV-ssa"/>
-                                    <constraint firstItem="ed7-g1-CUH" firstAttribute="top" secondItem="esW-XQ-Rgr" secondAttribute="top" constant="5" id="SOH-Tl-7Jx"/>
+                                    <constraint firstItem="ed7-g1-CUH" firstAttribute="top" secondItem="esW-XQ-Rgr" secondAttribute="top" constant="15" id="SOH-Tl-7Jx"/>
                                     <constraint firstItem="ed7-g1-CUH" firstAttribute="width" secondItem="esW-XQ-Rgr" secondAttribute="width" multiplier="0.75" id="VXc-oS-TCq"/>
                                     <constraint firstAttribute="bottom" secondItem="HRY-gT-z5N" secondAttribute="bottom" id="nSE-R7-rxg"/>
                                 </constraints>
@@ -117,6 +117,7 @@
                     <tabBarItem key="tabBarItem" title="Explore" id="AkS-ap-Xcv"/>
                     <connections>
                         <outlet property="filterCircularView" destination="bIo-Gb-9Zl" id="Pgc-LF-2Ex"/>
+                        <outlet property="searchView" destination="ed7-g1-CUH" id="UzK-kt-Jhq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Iwg-gQ-Axe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
