--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -67,18 +67,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="esW-XQ-Rgr" userLabel="SearchAndFilterView">
-                                <rect key="frame" x="15" y="59" width="363" height="100"/>
+                                <rect key="frame" x="15" y="59" width="363" height="90"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-g1-CUH" userLabel="SearchView">
-                                        <rect key="frame" x="5" y="15" width="272.33333333333331" height="70"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <rect key="frame" x="5" y="15" width="272.33333333333331" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRY-gT-z5N" userLabel="FilterView">
-                                        <rect key="frame" x="282.33333333333331" y="0.0" width="80.666666666666686" height="100"/>
+                                        <rect key="frame" x="282.33333333333331" y="0.0" width="80.666666666666686" height="90"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIo-Gb-9Zl" userLabel="FilterCircularView">
-                                                <rect key="frame" x="10.333333333333371" y="20" width="60" height="60"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <rect key="frame" x="10.333333333333371" y="15" width="60" height="60"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="60" id="Mos-7a-0bg"/>
                                                     <constraint firstAttribute="height" constant="60" id="aaN-vf-MH3"/>
@@ -96,7 +96,7 @@
                                 <constraints>
                                     <constraint firstItem="HRY-gT-z5N" firstAttribute="leading" secondItem="ed7-g1-CUH" secondAttribute="trailing" constant="5" id="0GV-wt-Pyz"/>
                                     <constraint firstItem="ed7-g1-CUH" firstAttribute="leading" secondItem="esW-XQ-Rgr" secondAttribute="leading" constant="5" id="1Od-IT-0uZ"/>
-                                    <constraint firstAttribute="height" constant="100" id="2vF-Pv-rBi"/>
+                                    <constraint firstAttribute="height" constant="90" id="2vF-Pv-rBi"/>
                                     <constraint firstAttribute="bottom" secondItem="ed7-g1-CUH" secondAttribute="bottom" constant="15" id="DFn-48-k0n"/>
                                     <constraint firstItem="HRY-gT-z5N" firstAttribute="top" secondItem="esW-XQ-Rgr" secondAttribute="top" id="KTW-ob-8sM"/>
                                     <constraint firstAttribute="trailing" secondItem="HRY-gT-z5N" secondAttribute="trailing" id="RLK-bV-ssa"/>
