--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -71,7 +71,21 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-g1-CUH" userLabel="SearchView">
                                         <rect key="frame" x="5" y="10" width="272.33333333333331" height="70"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="t2Q-3o-5Uq">
+                                                <rect key="frame" x="10" y="15.999999999999996" width="60" height="38.333333333333329"/>
+                                                <color key="tintColor" name="ContrastPaletteLabel"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="xn2-pW-EGn"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="t2Q-3o-5Uq" firstAttribute="top" secondItem="ed7-g1-CUH" secondAttribute="top" constant="15" id="cov-jk-Jmr"/>
+                                            <constraint firstItem="t2Q-3o-5Uq" firstAttribute="leading" secondItem="ed7-g1-CUH" secondAttribute="leading" constant="10" id="gOz-xh-5Bx"/>
+                                            <constraint firstAttribute="bottom" secondItem="t2Q-3o-5Uq" secondAttribute="bottom" constant="15" id="rIQ-pp-CmT"/>
+                                        </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRY-gT-z5N" userLabel="FilterView">
                                         <rect key="frame" x="282.33333333333331" y="0.0" width="80.666666666666686" height="90"/>
@@ -163,8 +177,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <namedColor name="ContrastPalette">
             <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="ContrastPaletteLabel">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.23529411764705882" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
