--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" name="UniversalMonoColor"/>
                                         <constraints>
                                             <constraint firstItem="t2Q-3o-5Uq" firstAttribute="top" secondItem="ed7-g1-CUH" secondAttribute="top" constant="15" id="cov-jk-Jmr"/>
                                             <constraint firstItem="t2Q-3o-5Uq" firstAttribute="leading" secondItem="ed7-g1-CUH" secondAttribute="leading" constant="10" id="gOz-xh-5Bx"/>
@@ -92,7 +92,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIo-Gb-9Zl" userLabel="FilterCircularView">
                                                 <rect key="frame" x="10.333333333333371" y="15" width="60" height="60"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" name="UniversalMonoColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="60" id="Mos-7a-0bg"/>
                                                     <constraint firstAttribute="height" constant="60" id="aaN-vf-MH3"/>
@@ -180,6 +180,9 @@
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <namedColor name="ContrastPaletteBackground">
             <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="UniversalMonoColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
