Temporary Filter Image added to View

--- a/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
+++ b/Airbnb-Storyboard-Clone/Storyboards/Base.lproj/Main.storyboard
@@ -92,10 +92,22 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIo-Gb-9Zl" userLabel="FilterCircularView">
                                                 <rect key="frame" x="10.333333333333371" y="15" width="60" height="60"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="line.3.horizontal.decrease.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4RO-RH-h3h">
+                                                        <rect key="frame" x="15" y="16" width="30" height="28.666666666666664"/>
+                                                        <color key="tintColor" name="ContrastPaletteLabel"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="V9D-rD-ybQ"/>
+                                                            <constraint firstAttribute="width" constant="30" id="wNH-rF-vq9"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                </subviews>
                                                 <color key="backgroundColor" name="UniversalMonoColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="60" id="Mos-7a-0bg"/>
+                                                    <constraint firstItem="4RO-RH-h3h" firstAttribute="centerX" secondItem="bIo-Gb-9Zl" secondAttribute="centerX" id="XEf-rE-6JD"/>
                                                     <constraint firstAttribute="height" constant="60" id="aaN-vf-MH3"/>
+                                                    <constraint firstItem="4RO-RH-h3h" firstAttribute="centerY" secondItem="bIo-Gb-9Zl" secondAttribute="centerY" id="fVa-iV-Cye"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -177,6 +189,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="line.3.horizontal.decrease.circle.fill" catalog="system" width="128" height="123"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <namedColor name="ContrastPaletteBackground">
             <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
